# GenerativeEscherMeshes

./: .gitignore  README.md  Troubleshooting.md  freeze.txt  install.sh  pyproject.toml  requirements.txt
escher/: main.py  main_minimal.py
escher/OTE/core/: AffineTrans.py  Constraints.py  GlobalDeformation.py  OTESolver.py  SparseSystem.py
escher/OTE/tilings/: Cylinder.py  KleinBottle.py  MobiusStrip.py  OrbifoldI.py  OrbifoldIHybrid.py  OrbifoldIHybrid_triangle.py  OrbifoldII.py  OrbifoldIIHybrid.py  OrbifoldIII.py  OrbifoldII_hexagon.py  OrbifoldIV.py  OrbifoldIVHybrid.py  PinnedBoundary.py  ProjectivePlane.py  Reflect333.py  Reflect442.py  Reflect632.py  ReflectSquare.py  RightAngleHybrid.py  Torus.py  Torus_hexagon.py  conventions.md
escher/baselines/: main_direct_points.py  run_stable_diffusion.py  tiled_images.py
escher/configs/: base.yaml
escher/geometry/: equal_area_loss.py  get_base_mesh.py  sanity_checks.py  save_mesh.py  split_square_boundary.py  split_tris.py  vertex_augmentation.py
escher/guidance/: deepfloyd.py  sd.py  sd_dreambooth.py  sd_textualinversion.py
escher/misc/: color_conversion.py  inpaint_mask.py  misc.py
escher/rendering/: crop_rendering.py  get_colors.py  render_mesh_from_path.py  render_mesh_matplotlib.py  render_tiling_core.py  render_tiling_from_pkl.py  render_tiling_paper_figs.py  renderer_nvdiffrast.py
escher/sanity_checks/: inspect_pkl.py  test_gradient_diff_rendering.py
